@@ -11,8 +11,6 @@ This is a list of some things to do:
 
 23) TiLP used as a normal user
 
-24) user boxes should be showed at center
-
 //------
 
 + = done.
